# smart-ai-chatbot

./: .env.compose.example  .gitignore  LICENSE  LICENSE.md  README.md  ci.sh  deploy-compose.sh  docker-compose.yml
.github/: pull_request_template.md
python/chatbot-server/: .dockerignore  .env.example  Dockerfile  README.md  ci.sh  docker-compose.yml  pyproject.toml  run_dev.sh  run_dev_cli.sh  run_dev_server.sh  run_test_server.sh
python/chatbot-server/migrations/: 001_create_users_table.sql  001_initial_schema.sql  002_create_chats_and_rbac.sql  002_folder_rls_owner_only.sql  README.md
python/chatbot-server/scripts/: run_migrations.py
python/chatbot-server/src/: main.py  settings.py
python/chatbot-server/src/app_data/: __init__.py  factory.py
python/chatbot-server/src/app_data/adapters/: __init__.py
python/chatbot-server/src/app_data/ports/: __init__.py  chat_port.py  types.py
python/chatbot-server/src/auth/: __init__.py  factory.py
python/chatbot-server/src/auth/adapters/: __init__.py
python/chatbot-server/src/auth/ports/: __init__.py  auth_port.py  types.py
python/chatbot-server/src/chatbot/: graph.py  model.py  nodes.py  state.py  tools.py  utils.py
python/chatbot-server/src/server/: __init__.py  app.py  dependencies.py  middleware.py  migrations_startup.py
python/chatbot-server/src/utils/: clients.py  database_connection_url.py  logging.py  messages.py  validation.py
python/chatbot-server/tests/: conftest.py  test_api.py  test_auth.py  test_chat_adapter.py  test_database_connection_url.py  test_messages.py  test_middleware.py  test_postgres_migrations.py  test_prompts.py  test_schemas.py
(+106 files in other folders)
